Improve #919: use isBlank/strip instead of trim